# tplink-deco-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS  codeql-config.yml  dependabot.yml
.github/workflows/: auto-assign.yml  ci.yml  release.yml
docs/: README.md  auth-protocol.md  mcp.md  rest.md
docs/api-responses/: p9-all-sensitive-compatibility.json  p9-beamforming-noop.json  p9-bootstrap-compatibility.json  p9-domain-login-compatibility.json  p9-fuzzy-compatibility-retry.json  p9-fuzzy-compatibility.json  p9-http-binary-digest-audit.json  p9-http-gap-probe.json  p9-ieee80211r-noop.json  p9-mcp-complete-tmp-batch-audit.json  p9-multipart-backup-contract.json  p9-reservation-modify-noop.json  p9-sensitive-compatibility.json  p9-system-log-compatibility.json  p9-timesetting-noop.json  p9-tmp-beamforming-noop.json  p9-tmp-contract-probe.json  p9-tmp-discovery.json  p9-tmp-ieee80211r-noop.json  p9-tmp-iot-module-contract-probe.json  p9-tmp-mcp-audit.json  p9-tmp-monthly-report-noop.json  p9-tmp-new-read-discovery.json  p9-tmp-read-matrix.json  p9-tmp-sensitive-read-discovery.json  p9-web-assets.json
docs/architecture/: semantic-resource-routing.md
docs/endpoints/: README.md  administration.md  clients.md  cloud-and-account.md  ddns.md  device.md  dhcp.md  eco-mode-and-time.md  firmware-and-upgrade.md  homeshield-security.md  iot-smart-home.md  iptv.md  ipv6-firewall.md  login.md  logs-and-diagnostics.md  misc-services.md  nat-port-forwarding.md  network.md  onboarding-and-provisioning.md  parental-control-and-qos.md  routing.md  storage-usb.md  system.md  vpn.md  wireless.md  wps.md
docs/incidents/: 2026-07-12-p9-tmp-topology-loss.md
docs/protocol/: cloud-api.md  transport-and-dispatch.md
examples/: clients.py  dump_responses.py  p9_http_gap_probe.py  p9_mcp_live_audit.py  read_only_probe.py  tmp_read_contract_probe.py  tmp_unverified_read_probe.py  verify_reservation_modify_noop.py  verify_setting_noop.py  verify_tmp_beamforming_noop.py  verify_tmp_ieee80211r_noop.py  verify_tmp_monthly_report_noop.py
src/tplink_deco/: __init__.py  client.py  crypto.py  exceptions.py  models.py  protocol.py  session.py  transport.py
src/tplink_deco/auth/: protocol.py
src/tplink_deco/crypto/: rsa.py
src/tplink_deco/models/: _utils.py  client_device.py  device.py  wlan_config.py
src/tplink_deco_api/: __init__.py  _json.py  capability_routing.py  client.py  endpoint_catalog.py  endpoint_spec.py  endpoints.py  fuzzy.py  http_mutation_verification.py  http_noop_verification.py  model_compatibility.py  mutation_planner.py  tmp_beamforming_noop_verification.py  tmp_boolean_noop_verification.py  tmp_client.py  tmp_lab.py  tmp_monthly_report_noop_verification.py  tmp_mutation_planner.py  tmp_mutation_verification.py  tmp_noop_verification.py  tmp_opcode_catalog.py  tmp_protocol.py  tmp_read_contract_probe.py  tmp_ssh_config.py  tmp_ssh_stream.py  tmp_stream.py  tmp_unverified_read_probe.py
src/tplink_deco_api/auth/: __init__.py  protocol.py  session.py  transport.py
src/tplink_deco_api/crypto/: __init__.py  aes.py  hash.py  rsa.py
src/tplink_deco_api/data/: __init__.py  p9_binary_compatibility.json  p9_bootstrap_compatibility.json  p9_compatibility.json  p9_mutation_compatibility.json  p9_tmp_compatibility.json  p9_tmp_mutation_compatibility.json  tmp_app_contracts.json  tmp_indirect_app_contracts.json  tmp_opcode_registry.json
src/tplink_deco_api/exceptions/: __init__.py  api.py  auth.py  base.py  confirmation.py  controller_changed.py  crypto.py  expired_plan.py  idempotency_conflict.py  idempotency_in_progress.py  mutation_ineligible.py  tmp.py  transport.py  unknown_plan.py
src/tplink_deco_api/mcp/: __init__.py  _static_token_verifier.py  config.py  server.py  service.py
src/tplink_deco_api/models/: __init__.py  _utils.py  address_reservation.py  address_reservation_table.py  api_response.py  binary_response.py  capability_report.py  capability_route.py  client_device.py  compatibility_delta.py  compatibility_manifest.py  device.py  device_mode.py  dsl_status.py  endpoint_observation.py  endpoint_probe_result.py  fuzzy_read_candidate.py  fuzzy_read_observation.py  http_mutation_verification_candidate.py  http_noop_verification_result.py  internet_status.py  log_type.py  (+22 more)
tests/: response_contract_assertions.py  test_capability_routing.py  test_client.py  test_compatibility.py  test_crypto.py  test_endpoint_catalog.py  test_endpoints_and_models.py  test_fuzzy.py  test_http_mutation_verification.py  test_http_noop_verification.py  test_login.py  test_mcp.py  test_model_compatibility.py  test_mutation_planner.py  test_mutation_verification_example.py  test_network_models.py  test_network_totals.py  test_p9_http_gap_probe_example.py  test_p9_mcp_live_audit_example.py  test_protocol.py  test_rest.py  test_setting_mutation_verification_example.py  test_system_models.py  test_tmp_beamforming_noop_verification.py  test_tmp_beamforming_noop_verification_example.py  test_tmp_lab.py  test_tmp_monthly_report_noop_verification.py  test_tmp_monthly_report_noop_verification_example.py  test_tmp_mutation_planner.py  test_tmp_mutation_verification.py  test_tmp_noop_verification.py  test_tmp_noop_verification_example.py  test_tmp_opcode_catalog.py  test_tmp_protocol.py  test_tmp_read_contract_example.py  test_tmp_read_contract_probe.py  test_tmp_ssh.py  test_tmp_unverified_read_example.py  test_tmp_unverified_read_probe.py  test_transport.py
(+82 files in other folders)
