[project]
name = "tplink-deco-api"
version = "1.1.0"
description = "SDK Python para controle de roteadores TP-Link Deco via API HTTP interna"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Roque", email = "rodrigogoncalvesroque@gmail.com" }]
keywords = ["tplink", "deco", "mesh", "wifi", "router", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/roquerodrigo/tplink-deco-api"
Repository = "https://github.com/roquerodrigo/tplink-deco-api"
Issues = "https://github.com/roquerodrigo/tplink-deco-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tplink_deco_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
