[project]
name = "tplink-deco-api"
version = "1.2.0"
description = "Python SDK for controlling TP-Link Deco routers via the internal HTTP API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Roque", email = "rodrigogoncalvesroque@gmail.com" }]
keywords = ["tplink", "deco", "mesh", "wifi", "router", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=46.0.7",
]

[project.urls]
Homepage = "https://github.com/roquerodrigo/tplink-deco-api"
Repository = "https://github.com/roquerodrigo/tplink-deco-api"
Issues = "https://github.com/roquerodrigo/tplink-deco-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tplink_deco_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/tplink_deco_api",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TC",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unreachable = true
warn_unused_ignores = true
disallow_any_explicit = true
