[project]
name = "tplink-deco-api"
version = "0.1.0"
description = "Model-aware MCP server for discovering, monitoring, and safely controlling TP-Link Deco mesh networks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Webb", email = "chris@spinthewebb.com" },{ name = "Rodrigo Roque", email = "rodrigogoncalvesroque@gmail.com" }]
keywords = ["tplink", "deco", "mesh", "wifi", "router", "api", "sdk", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=46.0.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]
tmp = ["paramiko>=3,<5"]

[project.scripts]
tplink-deco-mcp = "tplink_deco_api.mcp.server:main"

[project.urls]
Homepage = "https://github.com/tazmaniax/tplink-deco-api"
Repository = "https://github.com/tazmaniax/tplink-deco-api"
Issues = "https://github.com/tazmaniax/tplink-deco-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tplink_deco_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/tplink_deco_api",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[dependency-groups]
dev = [
    "mcp>=1.27,<2",
    "paramiko>=3,<5",
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
    "types-paramiko>=3",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TC",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unreachable = true
warn_unused_ignores = true
disallow_any_explicit = true
